# flip7

./: CMakeLists.txt  README.md  flip7.ipynb  postBuild
include/: assert.h  deck.h  game.h  player.h  stats.h
src/: deck.cpp  game.cpp  player.cpp
util/: main.cpp
